Settings screen improvements