@@ -5,9 +5,9 @@ import net.minecraft.client.*;
 import net.minecraft.network.chat.Component;
 import net.vulkanmod.Initializer;
 import net.vulkanmod.config.Config;
+import net.vulkanmod.config.gui.OptionBlock;
 import net.vulkanmod.config.video.VideoModeManager;
 import net.vulkanmod.config.video.VideoModeSet;
-import net.vulkanmod.config.gui.OptionBlock;
 import net.vulkanmod.render.chunk.build.light.LightMode;
 import net.vulkanmod.vulkan.Renderer;
 import net.vulkanmod.vulkan.device.DeviceManager;
@@ -15,10 +15,11 @@ import net.vulkanmod.vulkan.device.DeviceManager;
 import java.util.stream.IntStream;
 
 public abstract class Options {
-    static net.minecraft.client.Options minecraftOptions = Minecraft.getInstance().options;
-    static Config config = Initializer.CONFIG;
-    static Window window = Minecraft.getInstance().getWindow();
     public static boolean fullscreenDirty = false;
+    static Config config = Initializer.CONFIG;
+    static Minecraft minecraft = Minecraft.getInstance();
+    static Window window = minecraft.getWindow();
+    static net.minecraft.client.Options minecraftOptions = minecraft.options;
 
     public static OptionBlock[] getVideoOpts() {
         var videoMode = config.videoMode;
@@ -33,7 +34,7 @@ public abstract class Options {
         var refreshRates = videoModeSet.getRefreshRates();
 
         CyclingOption<Integer> RefreshRate = (CyclingOption<Integer>) new CyclingOption<>(
-                Component.translatable("Refresh Rate"),
+                Component.translatable("vulkanmod.options.refreshRate"),
                 refreshRates.toArray(new Integer[0]),
                 (value) -> {
                     VideoModeManager.selectedVideoMode.refreshRate = value;
@@ -46,7 +47,7 @@ public abstract class Options {
                 .setTranslator(refreshRate -> Component.nullToEmpty(refreshRate.toString()));
 
         Option<VideoModeSet> resolutionOption = new CyclingOption<>(
-                Component.translatable("Resolution"),
+                Component.translatable("options.fullscreen.resolution"),
                 VideoModeManager.getVideoResolutions(),
                 (value) -> {
                     VideoModeManager.selectedVideoMode = value.getVideoMode(RefreshRate.getNewValue());
@@ -56,86 +57,87 @@ public abstract class Options {
                         fullscreenDirty = true;
                 },
                 () -> {
-                    var videoMode1 = VideoModeManager.selectedVideoMode;
-                    var videoModeSet1 = VideoModeManager.getFromVideoMode(videoMode1);
+                    var selectedVideoMode = VideoModeManager.selectedVideoMode;
+                    var selectedVideoModeSet = VideoModeManager.getFromVideoMode(selectedVideoMode);
 
-                    if (videoModeSet1 == null) {
-                        videoModeSet1 = VideoModeSet.getDummy();
-                    }
-
-                    return videoModeSet1;
+                    return selectedVideoModeSet != null ? selectedVideoModeSet : VideoModeSet.getDummy();
                 })
                 .setTranslator(resolution -> Component.nullToEmpty(resolution.toString()));
 
         resolutionOption.setOnChange(() -> {
-            var videoMode1 = resolutionOption.getNewValue();
-            var refreshRates1 = videoMode1.getRefreshRates();
-            RefreshRate.setValues(refreshRates1.toArray(new Integer[0]));
-            RefreshRate.setNewValue(refreshRates1.get(refreshRates1.size() - 1));
+            var newVideoMode = resolutionOption.getNewValue();
+            var newRefreshRates = newVideoMode.getRefreshRates().toArray(new Integer[0]);
+
+            RefreshRate.setValues(newRefreshRates);
+            RefreshRate.setNewValue(newRefreshRates[newRefreshRates.length - 1]);
         });
 
-        return new OptionBlock[] {
+        return new OptionBlock[]{
                 new OptionBlock("", new Option<?>[]{
                         resolutionOption,
                         RefreshRate,
-                        new SwitchOption(Component.translatable("vulkanmod.options.windowedFullscreen"),
-                                value -> {
-                                    config.windowedFullscreen = value;
-                                    fullscreenDirty = true;
-                                },
-                                () -> config.windowedFullscreen),
-                        new SwitchOption(Component.translatable("Fullscreen"),
+                        new SwitchOption(Component.translatable("options.fullscreen"),
                                 value -> {
                                     minecraftOptions.fullscreen().set(value);
 //                            window.toggleFullScreen();
                                     fullscreenDirty = true;
                                 },
                                 () -> minecraftOptions.fullscreen().get()),
-                        new RangeOption(Component.translatable("Max Framerate"),
+                        new SwitchOption(Component.translatable("vulkanmod.options.windowedFullscreen"),
+                                value -> {
+                                    config.windowedFullscreen = value;
+                                    fullscreenDirty = true;
+                                },
+                                () -> config.windowedFullscreen),
+                        new RangeOption(Component.translatable("options.framerateLimit"),
                                 10, 260, 10,
-                                value -> Component.nullToEmpty(value == 260 ? "Unlimited" : String.valueOf(value)),
+                                value -> Component.nullToEmpty(value == 260 ?
+                                        Component.translatable("options.framerateLimit.max").getString() :
+                                        String.valueOf(value)),
                                 value -> {
                                     minecraftOptions.framerateLimit().set(value);
                                     window.setFramerateLimit(value);
                                 },
                                 () -> minecraftOptions.framerateLimit().get()),
-                        new SwitchOption(Component.translatable("VSync"),
+                        new SwitchOption(Component.translatable("options.vsync"),
                                 value -> {
                                     minecraftOptions.enableVsync().set(value);
-                                    Minecraft.getInstance().getWindow().updateVsync(value);
+                                    window.updateVsync(value);
                                 },
                                 () -> minecraftOptions.enableVsync().get()),
                 }),
                 new OptionBlock("", new Option<?>[]{
-                        new CyclingOption<>(Component.translatable("Gui Scale"),
-                                getGuiScaleValues(),
-                                (value) -> {
-                                    minecraftOptions.guiScale().set(value);
-                                    Minecraft.getInstance().resizeDisplay();
-                                },
-                                () -> minecraftOptions.guiScale().get())
-                                .setTranslator(value -> value == 0 ? Component.literal("Auto") : Component.literal(value.toString())),
-                        new RangeOption(Component.translatable("Brightness"),
-                                0, 100, 1,
+                        new RangeOption(Component.translatable("options.guiScale"),
+                                0, window.calculateScale(0, minecraft.isEnforceUnicode()), 1,
+                                value -> Component.translatable((value == 0)
+                                        ? "options.guiScale.auto"
+                                        : String.valueOf(value)),
                                 value -> {
-                                    if (value == 0) return Component.translatable("options.gamma.min");
-                                    else if (value == 50) return Component.translatable("options.gamma.default");
-                                    else if (value == 100) return Component.translatable("options.gamma.max");
-                                    return Component.literal(String.valueOf(value));
+                                    minecraftOptions.guiScale().set(value);
+                                    minecraft.resizeDisplay();
                                 },
+                                () -> (minecraftOptions.guiScale().get())),
+                        new RangeOption(Component.translatable("options.gamma"),
+                                0, 100, 1,
+                                value -> Component.translatable(switch (value) {
+                                    case 0 -> "options.gamma.min";
+                                    case 50 -> "options.gamma.default";
+                                    case 100 -> "options.gamma.max";
+                                    default -> String.valueOf(value);
+                                }),
                                 value -> minecraftOptions.gamma().set(value * 0.01),
                                 () -> (int) (minecraftOptions.gamma().get() * 100.0)),
                 }),
                 new OptionBlock("", new Option<?>[]{
-                        new SwitchOption(Component.translatable("View Bobbing"),
+                        new SwitchOption(Component.translatable("options.viewBobbing"),
                                 (value) -> minecraftOptions.bobView().set(value),
                                 () -> minecraftOptions.bobView().get()),
-                        new CyclingOption<>(Component.translatable("Attack Indicator"),
+                        new CyclingOption<>(Component.translatable("options.attackIndicator"),
                                 AttackIndicatorStatus.values(),
                                 value -> minecraftOptions.attackIndicator().set(value),
                                 () -> minecraftOptions.attackIndicator().get())
                                 .setTranslator(value -> Component.translatable(value.getKey())),
-                        new SwitchOption(Component.translatable("Autosave Indicator"),
+                        new SwitchOption(Component.translatable("options.autosaveIndicator"),
                                 value -> minecraftOptions.showAutosaveIndicator().set(value),
                                 () -> minecraftOptions.showAutosaveIndicator().get()),
                 })
@@ -143,44 +145,39 @@ public abstract class Options {
     }
 
     public static OptionBlock[] getGraphicsOpts() {
-        return new OptionBlock[] {
+        return new OptionBlock[]{
                 new OptionBlock("", new Option<?>[]{
-                        new RangeOption(Component.translatable("Render Distance"),
+                        new RangeOption(Component.translatable("options.renderDistance"),
                                 2, 32, 1,
-                                (value) -> {
-                                    minecraftOptions.renderDistance().set(value);
-                                },
+                                (value) -> minecraftOptions.renderDistance().set(value),
                                 () -> minecraftOptions.renderDistance().get()),
-                        new RangeOption(Component.translatable("Simulation Distance"),
+                        new RangeOption(Component.translatable("options.simulationDistance"),
                                 5, 32, 1,
-                                (value) -> {
-                                    minecraftOptions.simulationDistance().set(value);
-                                },
+                                (value) -> minecraftOptions.simulationDistance().set(value),
                                 () -> minecraftOptions.simulationDistance().get()),
-                        new CyclingOption<>(Component.translatable("Chunk Builder Mode"),
-
+                        new CyclingOption<>(Component.translatable("options.prioritizeChunkUpdates"),
                                 PrioritizeChunkUpdates.values(),
                                 value -> minecraftOptions.prioritizeChunkUpdates().set(value),
                                 () -> minecraftOptions.prioritizeChunkUpdates().get())
                                 .setTranslator(value -> Component.translatable(value.getKey())),
                 }),
                 new OptionBlock("", new Option<?>[]{
-                        new CyclingOption<>(Component.translatable("Graphics"),
+                        new CyclingOption<>(Component.translatable("options.graphics"),
                                 new GraphicsStatus[]{GraphicsStatus.FAST, GraphicsStatus.FANCY},
                                 value -> minecraftOptions.graphicsMode().set(value),
                                 () -> minecraftOptions.graphicsMode().get())
                                 .setTranslator(graphicsMode -> Component.translatable(graphicsMode.getKey())),
-                        new CyclingOption<>(Component.translatable("Particles"),
+                        new CyclingOption<>(Component.translatable("options.particles"),
                                 new ParticleStatus[]{ParticleStatus.MINIMAL, ParticleStatus.DECREASED, ParticleStatus.ALL},
                                 value -> minecraftOptions.particles().set(value),
                                 () -> minecraftOptions.particles().get())
                                 .setTranslator(particlesMode -> Component.translatable(particlesMode.getKey())),
-                        new CyclingOption<>(Component.translatable("Clouds"),
+                        new CyclingOption<>(Component.translatable("options.renderClouds"),
                                 CloudStatus.values(),
                                 value -> minecraftOptions.cloudStatus().set(value),
                                 () -> minecraftOptions.cloudStatus().get())
                                 .setTranslator(value -> Component.translatable(value.getKey())),
-                        new CyclingOption<>(Component.translatable("Smooth Lighting"),
+                        new CyclingOption<>(Component.translatable("options.ao"),
                                 new Integer[]{LightMode.FLAT, LightMode.SMOOTH, LightMode.SUB_BLOCK},
                                 (value) -> {
                                     if (value > LightMode.FLAT)
@@ -188,27 +185,19 @@ public abstract class Options {
                                     else
                                         minecraftOptions.ambientOcclusion().set(false);
 
-                                    Initializer.CONFIG.ambientOcclusion = value;
+                                    config.ambientOcclusion = value;
 
-                                    Minecraft.getInstance().levelRenderer.allChanged();
+                                    minecraft.levelRenderer.allChanged();
                                 },
-                                () -> Initializer.CONFIG.ambientOcclusion)
-                                .setTranslator(value -> switch (value) {
-                                    case LightMode.FLAT -> Component.literal("Off");
-                                    case LightMode.SMOOTH -> Component.literal("On");
-                                    case LightMode.SUB_BLOCK -> Component.literal("On (Sub-block)");
-                                    default -> Component.literal("Unk");
-                                })
-                                .setTooltip(Component.nullToEmpty("""
-                                On (Sub-block): Enables smooth lighting for non full block (experimental).""")),
-                        new SwitchOption(Component.translatable("Unique opaque layer"),
-                                value -> {
-                                    config.uniqueOpaqueLayer = value;
-                                    Minecraft.getInstance().levelRenderer.allChanged();
-                                },
-                                () -> config.uniqueOpaqueLayer)
-                                .setTooltip(Component.translatable("vulkanmod.options.uniqueOpaqueLayer.tooltip")),
-                        new RangeOption(Component.translatable("Biome Blend Radius"),
+                                () -> config.ambientOcclusion)
+                                .setTranslator(value -> Component.translatable(switch (value) {
+                                    case LightMode.FLAT -> "options.off";
+                                    case LightMode.SMOOTH -> "options.on";
+                                    case LightMode.SUB_BLOCK -> "vulkanmod.options.ao.subBlock";
+                                    default -> "vulkanmod.options.unknown";
+                                }))
+                                .setTooltip(Component.translatable("vulkanmod.options.ao.subBlock.tooltip")),
+                        new RangeOption(Component.translatable("options.biomeBlendRadius"),
                                 0, 7, 1,
                                 value -> {
                                     int v = value * 2 + 1;
@@ -216,24 +205,24 @@ public abstract class Options {
                                 },
                                 (value) -> {
                                     minecraftOptions.biomeBlendRadius().set(value);
-                                    Minecraft.getInstance().levelRenderer.allChanged();
+                                    minecraft.levelRenderer.allChanged();
                                 },
                                 () -> minecraftOptions.biomeBlendRadius().get()),
                 }),
                 new OptionBlock("", new Option<?>[]{
-                        new SwitchOption(Component.translatable("Entity Shadows"),
+                        new SwitchOption(Component.translatable("options.entityShadows"),
                                 value -> minecraftOptions.entityShadows().set(value),
                                 () -> minecraftOptions.entityShadows().get()),
-                        new RangeOption(Component.translatable("Entity Distance"),
+                        new RangeOption(Component.translatable("options.entityDistanceScaling"),
                                 50, 500, 25,
                                 value -> minecraftOptions.entityDistanceScaling().set(value * 0.01),
                                 () -> minecraftOptions.entityDistanceScaling().get().intValue() * 100),
-                        new CyclingOption<>(Component.translatable("Mipmap Levels"),
+                        new CyclingOption<>(Component.translatable("options.mipmapLevels"),
                                 new Integer[]{0, 1, 2, 3, 4},
                                 value -> {
                                     minecraftOptions.mipmapLevels().set(value);
-                                    Minecraft.getInstance().updateMaxMipLevel(value);
-                                    Minecraft.getInstance().delayTextureReload();
+                                    minecraft.updateMaxMipLevel(value);
+                                    minecraft.delayTextureReload();
                                 },
                                 () -> minecraftOptions.mipmapLevels().get())
                                 .setTranslator(value -> Component.nullToEmpty(value.toString()))
@@ -242,28 +231,32 @@ public abstract class Options {
     }
 
     public static OptionBlock[] getOptimizationOpts() {
-        return new OptionBlock[] {
-                new OptionBlock("", new Option[] {
-                        new CyclingOption<>(Component.translatable("Advanced Chunk Culling"),
+        return new OptionBlock[]{
+                new OptionBlock("", new Option[]{
+                        new CyclingOption<>(Component.translatable("vulkanmod.options.advCulling"),
                                 new Integer[]{1, 2, 3, 10},
                                 value -> config.advCulling = value,
                                 () -> config.advCulling)
-                                .setTranslator(value -> {
-                                    String t = switch (value) {
-                                        case 1 -> "Aggressive";
-                                        case 2 -> "Normal";
-                                        case 3 -> "Conservative";
-                                        case 10 -> "Off";
-                                        default -> "Unk";
-                                    };
-                                    return Component.nullToEmpty(t);
-                                })
+                                .setTranslator(value -> Component.translatable(switch (value) {
+                                    case 1 -> "vulkanmod.options.advCulling.aggressive";
+                                    case 2 -> "vulkanmod.options.advCulling.normal";
+                                    case 3 -> "vulkanmod.options.advCulling.conservative";
+                                    case 10 -> "options.off";
+                                    default -> "vulkanmod.options.unknown";
+                                }))
                                 .setTooltip(Component.translatable("vulkanmod.options.advCulling.tooltip")),
-                        new SwitchOption(Component.translatable("Entity Culling"),
+                        new SwitchOption(Component.translatable("vulkanmod.options.entityCulling"),
                                 value -> config.entityCulling = value,
                                 () -> config.entityCulling)
                                 .setTooltip(Component.translatable("vulkanmod.options.entityCulling.tooltip")),
-                        new SwitchOption(Component.translatable("Indirect Draw"),
+                        new SwitchOption(Component.translatable("vulkanmod.options.uniqueOpaqueLayer"),
+                                value -> {
+                                    config.uniqueOpaqueLayer = value;
+                                    minecraft.levelRenderer.allChanged();
+                                },
+                                () -> config.uniqueOpaqueLayer)
+                                .setTooltip(Component.translatable("vulkanmod.options.uniqueOpaqueLayer.tooltip")),
+                        new SwitchOption(Component.translatable("vulkanmod.options.indirectDraw"),
                                 value -> config.indirectDraw = value,
                                 () -> config.indirectDraw)
                                 .setTooltip(Component.translatable("vulkanmod.options.indirectDraw.tooltip")),
@@ -273,45 +266,30 @@ public abstract class Options {
     }
 
     public static OptionBlock[] getOtherOpts() {
-        return new OptionBlock[] {
-                new OptionBlock("", new Option[] {
-                        new RangeOption(Component.translatable("Render queue size"),
+        return new OptionBlock[]{
+                new OptionBlock("", new Option[]{
+                        new RangeOption(Component.translatable("vulkanmod.options.frameQueue"),
                                 2, 5, 1,
                                 value -> {
                                     config.frameQueueSize = value;
                                     Renderer.scheduleSwapChainUpdate();
                                 }, () -> config.frameQueueSize)
                                 .setTooltip(Component.translatable("vulkanmod.options.frameQueue.tooltip")),
-                        new CyclingOption<>(Component.translatable("Device selector"),
+                        new CyclingOption<>(Component.translatable("vulkanmod.options.deviceSelector"),
                                 IntStream.range(-1, DeviceManager.suitableDevices.size()).boxed().toArray(Integer[]::new),
                                 value -> config.device = value,
                                 () -> config.device)
-                                .setTranslator(value -> {
-                                    String t;
-
-                                    if (value == -1)
-                                        t = "Auto";
-                                    else
-                                        t = DeviceManager.suitableDevices.get(value).deviceName;
-
-                                    return Component.nullToEmpty(t);
-                                })
-                                .setTooltip(Component.nullToEmpty(
-                                String.format("Current device: %s", DeviceManager.device.deviceName)))
+                                .setTranslator(value -> Component.translatable((value == -1)
+                                        ? "vulkanmod.options.deviceSelector.auto"
+                                        : DeviceManager.suitableDevices.get(value).deviceName)
+                                )
+                                .setTooltip(Component.nullToEmpty("%s: %s".formatted(
+                                        Component.translatable("vulkanmod.options.deviceSelector.tooltip").getString(),
+                                        DeviceManager.device.deviceName
+                                ))
+                        )
                 })
         };
 
-    }
-
-    static Integer[] getGuiScaleValues() {
-        int max = window.calculateScale(0, Minecraft.getInstance().isEnforceUnicode());
-
-        Integer[] values = new Integer[max];
-
-        for (int i = 0; i < max; i++) {
-            values[i] = i;
-        }
-
-        return values;
     }
 }
